# correctover-test

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
correctover_test/: __init__.py  cli.py
correctover_test/core/: engine.py  license.py  reporter.py
correctover_test/core/adapters/: __init__.py  base.py  crewai_adapter.py  llamaindex_adapter.py  smolagents_adapter.py
correctover_test/core/scenarios/: __init__.py  base.py  contract_break.py  env_protection.py  mcp_self_heal.py
